Fixed text text overflow in secret message section when changing screen size.

--- a/resources/css/secret-message.css
+++ b/resources/css/secret-message.css
@@ -16,7 +16,6 @@ body {
     color:black;
     text-align: center;
     text-transform: uppercase;
-
 }
 
 /*-------secret message section-------*/
@@ -28,7 +27,7 @@ body {
     width: 100%;
     margin: auto;
     flex-wrap: wrap;
-    padding: 5%;
+    padding: 5%, 5%, 10%;
     box-sizing: border-box;
     
 }
@@ -42,6 +41,11 @@ body {
     text-align: center;
     flex: 1 100px;
     cursor: pointer;
+    border-radius: 25px;
+}
+
+.box h2 {
+    margin: 2px;
 }
 #box-1 {
     color:brown;
@@ -54,9 +58,26 @@ body {
 #box-5 {
     transform:rotate(180deg)
 }
+#box-6,
+#box-7 {
+  flex: 45%;
+}
 
 #reset {
     flex: 100%;
+}
+.box-6-small {
+    display: none;
+}
+
+@media only screen and (max-width: 402px) {
+    #box-6-text {
+        display: none;
+    }
+    .box-6-small {
+        display: block;
+        font-size: 1.25rem;
+    }
 }
 
 /*-------rock paper scissors section-----*/
@@ -91,7 +112,7 @@ body {
     min-height: 400px;
     margin: auto;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     flex-direction: column;
     flex-wrap: wrap;
     text-align: center;
@@ -104,7 +125,7 @@ body {
     min-height: 400px;
     margin: auto;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     flex-direction: column;
     flex-wrap: wrap;
     text-align: center;
@@ -115,8 +136,10 @@ body {
     width: 100px;
 }
 
-.resetGameButton {
-    display: none;
+.reset-game-button {
     height: 50px;
     width: 100px;
+}
+.display-results {
+
 }
